tests/do/tmp/03_invalid_struct_literal.stderr
error[InvalidStructLiteral]: 结构体字面量语法无效
 --> /._/doc/do/tests/do/cases/err/03_invalid_struct_literal.do:2:14
 hint: 结构体字面量必须使用 `name: value`.
 2 |     u = User{1, 2}
   |              ^
